update about.hbs page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="image/esposito.jpg">
+        <p>This forecasts from API  <a href="https://weatherstack.com/">WeatherStack</a></p>
+        <img class="portrait" src="image/temporale.jpg">
 
     </div>
     {{>footer}}
