--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather</title>
-    <link rel="icon" href="/image/weather.png">
+    <link rel="icon" href="/image/weather_icon.png">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
