--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This forecasts from API  <a href="https://weatherstack.com/">WeatherStack</a></p>
+        <p>This forecasts from API  <a href="https://weatherstack.com/">WeatherStack</a> e <a href="https://www.mapbox.com/">Mapbox</a></p>
         <img class="portrait" src="image/temporale.jpg">
 
     </div>
